<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="openhab" translatable="false">openHAB</string>
    <string name="app_preferences_name">Settings</string>
    <string name="empty_string" translatable="false" />
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="delete">Delete</string>
    <string name="attribution_tag_discover_server">Discover openHAB server</string>
    <string name="attribution_tag_select_server_wifi">Select server based on Wi-Fi</string>
    <string name="attribution_tag_suggest_turn_on_wifi">Suggest to turn on Wi-Fi</string>
    <string name="mainmenu_openhab_sitemaps">Sitemaps</string>
    <string name="mainmenu_openhab_preferences">Settings</string>
    <string name="mainmenu_openhab_habpanel">HABPanel</string>
    <string name="mainmenu_openhab_main_ui">Main UI</string>
    <string name="mainmenu_openhab_frontail">Frontail</string>
    <string name="ui_on_server">%1$s (%2$s)</string>
    <string name="app_notifications">Notifications</string>
    <string name="habpanel_error">An error occurred while loading HABPanel</string>
    <string name="main_ui_error">An error occurred while loading Main UI</string>
    <string name="frontail_error">An error occurred while loading Frontail. Please note that it\'s not available via openHAB Cloud.</string>
    <string name="mainmenu_openhab_selectsitemap">Select default Sitemap</string>
    <string name="settings_clear_caches">Clear cache</string>
    <string name="settings_connection_title">Connection</string>
    <string name="settings_display_title">Display</string>
    <string name="settings_sitemap_title">Sitemap</string>
    <string name="settings_misc_title">Miscellaneous</string>
    <string name="settings_openhab_url">Local server URL</string>
    <string name="settings_openhab_url_summary">The URL of the openHAB dashboard (based on hostname or IP). If configured, autodiscovery is disabled. Current setting: %s</string>
    <string name="settings_openhab_alturl">Remote server URL</string>
    <string name="settings_openhab_alturl_summary">The URL of the openHAB dashboard used when the local address is unavailable. Current setting: %s</string>
    <string name="settings_openhab_username">Username</string>
    <string name="settings_openhab_password">Password</string>
    <string name="settings_openhab_password_summary_weak">Weak password set</string>
    <string name="settings_openhab_password_summary_strong">Strong password set</string>
    <string name="settings_openhab_api_token_hint">If you\'re using an API token, enter it in the username field and leave the password field empty</string>
    <string name="settings_openhab_sslclientcert">SSL client certificate</string>
    <string name="settings_openhab_sslclientcert_howto_summary">Tap here to get some hints and explanations on how to set up SSL client certificate authentication</string>
    <string name="settings_openhab_sslclientcert_howto_url" translatable="false">https://community.openhab.org/t/using-nginx-reverse-proxy-for-client-certificate-authentication-start-discussion/43064</string>
    <string name="settings_openhab_sslclientcert_not_supported">SSL client certificates are not supported by your device</string>
    <string name="frontail_url_title">Frontail URL</string>
    <string name="frontail_url_summary">The URL of Frontail. It\'s bundled with openHABian or can be installed manually. Leave empty to use the default settings. Current setting: %s</string>
    <string name="settings_openhab_screentimeroff">Disable screen timeout</string>
    <string name="settings_openhab_screentimeroff_summary">The screen doesn\'t turn off when openHAB is running</string>
    <string name="settings_openhab_demomode">Demo mode</string>
    <string name="settings_openhab_demomode_summary">If you don\'t have an openHAB server, enable demo mode to get an imagination of what openHAB is capable of.</string>
    <string name="start_page_title">Start page</string>
    <string name="drawer_entries">Side menu entries</string>
    <string name="settings_openhab_theme">Theme</string>
    <string name="settings_openhab_fullscreen">Fullscreen</string>
    <string name="settings_set_as_launcher_title">Register as launcher</string>
    <string name="settings_set_as_launcher_summary">Allow the app to be used as launcher. After enabling, the app still needs to be selected as default launcher to take effect.</string>
    <string name="settings_sitemap_compact_mode_title">Compact mode</string>
    <string name="settings_sitemap_compact_mode_off">Use a two-line layout for Sitemap widgets, which makes controls larger and thus easier to use, but requires more scrolling for longer lists</string>
    <string name="settings_sitemap_compact_mode_on">Use a one-line layout for Sitemap widgets, which puts as many widgets as possible on the screen, but reduces size of the controls</string>
    <string name="settings_color_scheme_title">Color scheme</string>
    <string name="settings_show_icons">Show icons</string>
    <string name="settings_openhab_icon_format">Icon format</string>
    <string name="settings_openhab_icon_format_value_png" translatable="false">PNG</string>
    <string name="settings_openhab_icon_format_value_svg" translatable="false">SVG</string>
    <string name="settings_openhab_icon_format_png">Bitmap</string>
    <string name="settings_openhab_icon_format_svg">Vector</string>
    <string name="settings_image_widget_scaling">Scale images to fit screen</string>
    <string name="settings_image_widget_scaling_summary_off">Keep \'Image\' widgets that are smaller than the screen width at their original size</string>
    <string name="settings_image_widget_scaling_summary_on">Make sure \'Image\' widgets fit the screen width by scaling them up or down as appropriate</string>
    <string name="settings_chart_scaling">Chart scaling</string>
    <string name="settings_chart_scaling_summary">Note: Smaller scaling shrinks fonts and line widths, so there\'s more space for the graph, but font readability may suffer.</string>
    <string name="settings_chart_scaling_value_xs">Very small</string>
    <string name="settings_clear_default_sitemap">Clear default Sitemap</string>
    <string name="settings_main_ui_start_page">Main UI start page</string>
    <string name="settings_openhab_alt_connection">Remote</string>
    <string name="settings_openhab_connection">Local</string>
    <string name="settings_show_sitemaps_in_drawer">Show all Sitemaps in side menu</string>
    <string name="settings_server_name">Server name</string>
    <string name="settings_server_primary_title">Primary server</string>
    <string name="settings_advanced">Advanced</string>
    <string name="device_control_subtitle_location_value" translatable="false">location</string>
    <string name="device_control_subtitle">Description in tiles</string>
    <string name="device_control_hint">Depending on your Android version these tiles are located at long-press menu of the power button or next to the quick tiles</string>
    <string name="send_device_info_to_server">Send device information to server</string>
    <string name="settings_alarm_clock">Alarm time</string>
    <string name="settings_alarm_clock_summary_on">Sends alarm time to Item \'%1$s\'</string>
    <string name="settings_alarm_clock_summary_off">Don\'t send alarm time</string>
    <string name="settings_alarm_clock_howto_url" translatable="false">https://www.openhab.org/docs/apps/android.html#alarm-clock</string>
    <string name="settings_phone_state">Call state</string>
    <string name="settings_phone_state_summary_on">Sends call state to Item \'%1$s\'</string>
    <string name="settings_phone_state_summary_off">Don\'t send call state</string>
    <string name="settings_phone_state_howto_url" translatable="false">https://www.openhab.org/docs/apps/android.html#call-state</string>
    <string name="settings_battery_level">Battery level</string>
    <string name="settings_battery_level_summary_on">Sends battery level to Item \'%1$s\'</string>
    <string name="settings_battery_level_summary_off">Don\'t send battery level</string>
    <string name="settings_battery_level_howto_url" translatable="false">https://www.openhab.org/docs/apps/android.html#battery-level</string>
    <string name="settings_charging_state">Charging state</string>
    <string name="settings_charging_state_summary_on">Sends charging state to Item \'%1$s\'</string>
    <string name="settings_charging_state_summary_off">Don\'t send charging state</string>
    <string name="settings_charging_state_howto_url" translatable="false">https://www.openhab.org/docs/apps/android.html#charging-state</string>
    <string name="settings_wifi_ssid">Wi-Fi name</string>
    <string name="settings_wifi_ssid_summary_on">Sends Wi-Fi name (SSID) to Item \'%1$s\'</string>
    <string name="settings_wifi_ssid_summary_off">Don\'t send Wi-Fi name (SSID)</string>
    <string name="settings_wifi_ssid_howto_url" translatable="false">https://www.openhab.org/docs/apps/android.html#wifi-name-ssid</string>
    <string name="send_device_info_schedule">Schedule</string>
    <string name="send_device_info_schedule_summary">Every 15 minutes while charging, every %s otherwise</string>
    <string name="chart_activity_show_legend">Show legend</string>
    <string name="chart_activity_period">Period</string>
    <string name="chart_activity_period_1_hour">1 hour</string>
    <string name="chart_activity_period_4_hour">4 hours</string>
    <string name="chart_activity_period_8_hour">8 hours</string>
    <string name="chart_activity_period_12_hour">12 hours</string>
    <string name="chart_activity_period_1_day">1 day</string>
    <string name="chart_activity_period_2_day">2 days</string>
    <string name="chart_activity_period_3_day">3 days</string>
    <string name="chart_activity_period_1_week">1 week</string>
    <string name="chart_activity_period_2_week">2 weeks</string>
    <string name="chart_activity_period_1_month">1 month</string>
    <string name="chart_activity_period_2_month">2 months</string>
    <string name="chart_activity_period_4_month">4 months</string>
    <string name="chart_activity_period_1_year">1 year</string>
    <string name="about_title">About</string>
    <string name="log_activity_action_clear_log">Clear log</string>
    <string name="log_activity_action_show_errors">Show errors only</string>
    <string name="log_activity_action_reload">Reload</string>
    <string name="content_description_player_previous">Skip to previous track</string>
    <string name="content_description_player_next">Skip to next track</string>
    <string name="content_description_player_play">Start playback</string>
    <string name="content_description_open_color_wheel">Open color wheel</string>
    <string name="content_description_color_up">On or hold to increase brightness</string>
    <string name="content_description_color_down">Off or hold to decrease brightness</string>
    <string name="intro_nfc">NFC</string>
    <string name="search">Search</string>
    <string name="widget_show_state_summary">The state is updated on the schedule that can be set in the settings under \"Send device information to server\"</string>
    <string name="create_home_screen_widget_no_command">Show current state</string>
    <string name="tile_enable">Turn on</string>
    <string name="tile_item_and_action">Item and action</string>
    <string name="tile_name">Name</string>
    <string name="tile_icon">Icon</string>
    <string name="tile_require_unlock">Require screen to be unlocked</string>
    <string name="tile_require_unlock_summary_on">Prompt for unlocking the device before allowing Item updates</string>
    <string name="tile_require_unlock_summary_off">Allow updating Items even if the device is locked</string>
    <string name="tile_icon_openhab_value" translatable="false">openhab_icon</string>
</resources>