<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/settings_openhab_connection">
    <org.openhab.habdroid.ui.widget.URLInputPreference
        android:defaultValue="@string/empty_string"
        android:inputType="textNoSuggestions"
        android:key="default_openhab_url"
        android:summary="@string/settings_openhab_url_summary"
        android:title="@string/settings_openhab_url"/>
    <EditTextPreference
        android:defaultValue="@string/empty_string"
        android:inputType="textNoSuggestions"
        android:key="default_openhab_username"
        android:title="@string/settings_openhab_username"/>
    <EditTextPreference
        android:defaultValue="@string/empty_string"
        android:inputType="textPassword"
        android:key="default_openhab_password"
        android:title="@string/settings_openhab_password"/>
</PreferenceScreen>