<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_openhab_alt_connection">
    <org.openhab.habdroid.ui.preference.UrlInputPreference
        android:defaultValue="@string/empty_string"
        android:key="default_openhab_alturl"
        android:summary="@string/settings_openhab_alturl_summary"
        android:title="@string/settings_openhab_alturl"
        android:icon="@drawable/ic_earth_grey_24dp"
        app:isHttpEnabled="false" />
    <org.openhab.habdroid.ui.preference.CustomInputTypePreference
        android:defaultValue="@string/empty_string"
        android:inputType="textNoSuggestions"
        android:key="default_openhab_remote_username"
        android:title="@string/settings_openhab_username"
        android:autofillHints="username,emailAddress"
        android:icon="@drawable/ic_person_outline_grey_24dp" />
    <org.openhab.habdroid.ui.preference.CustomInputTypePreference
        android:defaultValue="@string/empty_string"
        android:inputType="textPassword"
        android:key="default_openhab_remote_password"
        android:title="@string/settings_openhab_password"
        android:autofillHints="password"
        android:icon="@drawable/ic_shield_key_outline_grey_24dp" />
</androidx.preference.PreferenceScreen>
