<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_openhab_alt_connection">
    <org.openhab.habdroid.ui.preference.widgets.UrlInputPreference
        android:defaultValue="@string/empty_string"
        android:key="url"
        android:persistent="false"
        android:summary="@string/settings_openhab_alturl_summary"
        android:title="@string/settings_openhab_alturl"
        android:icon="@drawable/ic_earth_grey_24dp"
        app:isForRemoteServer="true"
        app:singleLineTitle="false" />
    <org.openhab.habdroid.ui.preference.widgets.CustomInputTypePreference
        android:defaultValue="@string/empty_string"
        android:persistent="false"
        android:inputType="textNoSuggestions"
        android:key="username"
        android:title="@string/settings_openhab_username"
        android:autofillHints="username,emailAddress"
        app:whitespaceBehavior="trim"
        android:icon="@drawable/ic_person_outline_grey_24dp"
        app:singleLineTitle="false" />
    <org.openhab.habdroid.ui.preference.widgets.CustomInputTypePreference
        android:defaultValue="@string/empty_string"
        android:persistent="false"
        android:inputType="textPassword"
        android:key="password"
        android:title="@string/settings_openhab_password"
        android:autofillHints="password"
        app:whitespaceBehavior="trim"
        android:icon="@drawable/ic_shield_key_outline_grey_24dp"
        app:singleLineTitle="false" />
    <org.openhab.habdroid.ui.preference.widgets.InfoPreference
        android:key="api_token_hint"
        app:infoUrl="https://www.openhab.org/docs/configuration/restdocs.html#authentication"
        android:summary="@string/settings_openhab_api_token_hint"
        app:singleLineTitle="false" />
</androidx.preference.PreferenceScreen>
