<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.openhab.habdroid.ui.preference.widgets.ItemAndStatePreference
        android:persistent="false"
        android:key="widget_item_and_action"
        android:title="@string/tile_item_and_action"
        app:singleLineTitle="false" />
    <org.openhab.habdroid.ui.preference.widgets.CustomInputTypePreference
        android:persistent="false"
        android:key="widget_name"
        android:title="@string/tile_name"
        app:whitespaceBehavior="ignore"
        android:inputType="text"
        app:singleLineTitle="false" />
    <SwitchPreferenceCompat
        android:persistent="false"
        android:key="show_state"
        android:title="@string/create_home_screen_widget_no_command"
        app:singleLineTitle="false"
        android:summary="@string/widget_show_state_summary"
        android:widgetLayout="@layout/preference_material_switch" />
</androidx.preference.PreferenceScreen>
