<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:activatedBackgroundIndicator"
    android:descendantFocusability="blocksDescendants">

    <include layout="@layout/widgetlist_icontext" />

    <ImageButton
        style="@style/ActionButton"
        android:id="@+id/up_button"
        android:contentDescription="@string/content_description_color_up"
        android:src="?themedArrowUpIcon" />

    <ImageButton
        style="@style/ActionButton"
        android:id="@+id/select_color_button"
        android:contentDescription="@string/content_description_open_color_wheel"
        android:src="?themedColorIcon" />

    <ImageButton
        style="@style/ActionButton"
        android:id="@+id/down_button"
        android:contentDescription="@string/content_description_color_down"
        android:src="?themedArrowDownIcon" />

</LinearLayout>
